tweak to fix issue with z-index on news ul list

--- a/themes/nudev/src/__PRECOMP/sass/homepage.scss
+++ b/themes/nudev/src/__PRECOMP/sass/homepage.scss
@@ -154,7 +154,7 @@ div.main{
           }
           & > ul{
             position: absolute;
-            z-index: 1000;
+            z-index: 500;
             margin: 0 0 0 0;
             width: 100%;
             list-style: none;
